istio_envoy_files/route-rule-reviews-test-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=paypal)(;.*)?$"
    route:
    - destination:
        host: reviews
        subset: v2
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=vishal)(;.*)?$"
    route:
    - destination:
        host: reviews
        subset: v3
  - route:
    - destination:
        host: reviews
        subset: v1
